# learn-gl-glutin-rust

./: Cargo.toml
src/: main.rs  shader.rs
src/_1_getting_started/: _10_upside_down_triangle.rs  _11_hotizontal_offset.rs  _12_vertex_pos_as_col.rs  _13_brick_texture.rs  _14_texture_units.rs  _15_flip_face_with_shader.rs  _16_experimental_wrapper.rs  _17_vary_visibility.rs  _18_uniform_visibility.rs  _19_transformations.rs  _1_window_color.rs  _20_transformation_over_time.rs  _21_inverse_order_trans.rs  _22_double_rotating.rs  _23_first_3d_view.rs  _24_3d_box.rs  _25_ten_boxes.rs  _26_camera_rotating.rs  _27_interactive_camera.rs  _28_rotating_camera.rs  _2_triangle_via_shader.rs  _3_rectangle_4_vertices.rs  _4_traingles_next_to_each_other.rs  _5_traingles_different_vao_vbo.rs  _6_traingles_different_fragment_shaders.rs  _7_shaders_linkage.rs  _8_shader_uniforms.rs  _9_fragment_interpolation_vertex.rs  mod.rs
src/_1_getting_started/shaders/: fragment_shader_12.fs  fragment_shader_13.fs  fragment_shader_14.fs  fragment_shader_15.fs  fragment_shader_16.fs  fragment_shader_17.fs  fragment_shader_18.fs  vertex_shader_10.vs  vertex_shader_11.vs  vertex_shader_12.vs  vertex_shader_14.vs  vertex_shader_19.vs  vertex_shader_23.vs
