[package]
name = "learn-opengl-glutin-gl-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28.0"
gl = "0.6.0"
image = "0.24.2"
cgmath = {version = "0.18.0", features = ["swizzle"]}

[features]
default = [
    "chapter-1",
]
chapter-1 = []
